hphp/hack/test/extended_reasons/unsafe_cast_return.php.exp
error: Typing[4110] Invalid return type

File unsafe_cast_return.php, line 4, character 10 - line 4, character 52:

 1 | <?hh
 2 | 
 3 | function foo(): int {
 4 |   return »HH\FIXME\UNSAFE_CAST<string, bool>("hello")«;
 5 | }

Expected int

File unsafe_cast_return.php, line 3, character 17 - line 3, character 19:

 1 | <?hh
 2 | 
 3 | function foo(): »int« {
 4 |   return HH\FIXME\UNSAFE_CAST<string, bool>("hello");
 5 | }

But got bool because the expression went through a HH\FIXME\UNSAFE_CAST. The type might be a lie!

File unsafe_cast_return.php, line 4, character 10 - line 4, character 52:

 1 | <?hh
 2 | 
 3 | function foo(): int {
 4 |   return »HH\FIXME\UNSAFE_CAST<string, bool>("hello")«;
 5 | }

Here's why:


  Step 1 of 2                                                                   

I started by checking this subtype relationship.

The subtype comes from this expression

File unsafe_cast_return.php, line 4, character 45 - line 4, character 51:

 1 | <?hh
 2 | 
 3 | function foo(): int {
 4 |   return HH\FIXME\UNSAFE_CAST<string, bool>(»"hello"«);
 5 | }

and flows into this element

File unsafe_cast_return.php, line 4, character 10 - line 4, character 52:

 1 | <?hh
 2 | 
 3 | function foo(): int {
 4 |   return »HH\FIXME\UNSAFE_CAST<string, bool>("hello")«;
 5 | }

through an UNSAFE_CAST

which itself flows into this expression

File unsafe_cast_return.php, line 4, character 3 - line 4, character 53:

 1 | <?hh
 2 | 
 3 | function foo(): int {
 4 |   »return HH\FIXME\UNSAFE_CAST<string, bool>("hello");«
 5 | }

because it is used in a return position

The supertype comes from this hint

File unsafe_cast_return.php, line 3, character 17 - line 3, character 19:

 1 | <?hh
 2 | 
 3 | function foo(): »int« {
 4 |   return HH\FIXME\UNSAFE_CAST<string, bool>("hello");
 5 | }


  Step 2 of 2                                 (here is where the error occurred) 

The subtype is a union type so next I checked the subtype constraint is satisfied for all its elements.

The subtype comes from this expression

File unsafe_cast_return.php, line 4, character 45 - line 4, character 51:

 1 | <?hh
 2 | 
 3 | function foo(): int {
 4 |   return HH\FIXME\UNSAFE_CAST<string, bool>(»"hello"«);
 5 | }

and flows into this element

File unsafe_cast_return.php, line 4, character 10 - line 4, character 52:

 1 | <?hh
 2 | 
 3 | function foo(): int {
 4 |   return »HH\FIXME\UNSAFE_CAST<string, bool>("hello")«;
 5 | }

through an UNSAFE_CAST

The supertype is the same as before.

File unsafe_cast_return.php, line 3, character 17 - line 3, character 19:

 1 | <?hh
 2 | 
 3 | function foo(): »int« {
 4 |   return HH\FIXME\UNSAFE_CAST<string, bool>("hello");
 5 | }

error: Typing[4110] Invalid return type

File unsafe_cast_return.php, line 4, character 10 - line 4, character 52:

 1 | <?hh
 2 | 
 3 | function foo(): int {
 4 |   return »HH\FIXME\UNSAFE_CAST<string, bool>("hello")«;
 5 | }

Expected int

File unsafe_cast_return.php, line 3, character 17 - line 3, character 19:

 1 | <?hh
 2 | 
 3 | function foo(): »int« {
 4 |   return HH\FIXME\UNSAFE_CAST<string, bool>("hello");
 5 | }

But got bool

File unsafe_cast_return.php, line 4, character 39 - line 4, character 42:

 1 | <?hh
 2 | 
 3 | function foo(): int {
 4 |   return HH\FIXME\UNSAFE_CAST<string, »bool«>("hello");
 5 | }

  via this generic Tout

File soundness.hhi, line 34, character 7 - line 34, character 10:

 32 |   Tin $t,
 33 |   ?\HH\FormatString<nothing> $msg = null,
 34 | )[]: ~»Tout«;
 35 | 
 36 | /**
 37 |  * `UNSAFE_NONNULL_CAST` allows you to lie to the type checker and

Here's why:


  Step 1 of 2                                                                   

I started by checking this subtype relationship.

The subtype comes from this hint

File soundness.hhi, line 34, character 6 - line 34, character 10:

 32 |   Tin $t,
 33 |   ?\HH\FormatString<nothing> $msg = null,
 34 | )[]: »~Tout«;
 35 | 
 36 | /**
 37 |  * `UNSAFE_NONNULL_CAST` allows you to lie to the type checker and

The supertype comes from this hint

File unsafe_cast_return.php, line 3, character 17 - line 3, character 19:

 1 | <?hh
 2 | 
 3 | function foo(): »int« {
 4 |   return HH\FIXME\UNSAFE_CAST<string, bool>("hello");
 5 | }


  Step 2 of 2                                 (here is where the error occurred) 

The subtype is a union type so next I checked the subtype constraint is satisfied for all its elements.

The subtype comes from this hint

File unsafe_cast_return.php, line 4, character 39 - line 4, character 42:

 1 | <?hh
 2 | 
 3 | function foo(): int {
 4 |   return HH\FIXME\UNSAFE_CAST<string, »bool«>("hello");
 5 | }

and flows into this hint

File soundness.hhi, line 34, character 7 - line 34, character 10:

 32 |   Tin $t,
 33 |   ?\HH\FormatString<nothing> $msg = null,
 34 | )[]: ~»Tout«;
 35 | 
 36 | /**
 37 |  * `UNSAFE_NONNULL_CAST` allows you to lie to the type checker and

as the instantiation of the generic Tout

The supertype is the same as before.

File unsafe_cast_return.php, line 3, character 17 - line 3, character 19:

 1 | <?hh
 2 | 
 3 | function foo(): »int« {
 4 |   return HH\FIXME\UNSAFE_CAST<string, bool>("hello");
 5 | }

