hphp/hack/test/extended_reasons/unsafe_cast_return.php
<?hh

function foo(): int {
  return HH\FIXME\UNSAFE_CAST<string, bool>("hello");
}
